core/engine/tests/snapshots/engine__dynamic-ticket-pricing_0.snap
---
source: core/engine/tests/engine.rs
expression: serialized_result
---
performance: "[perf]"
result:
  finalPrice:
    "$serde_json::private::Number": "536.25"
  priceStrategy: premium
trace:
  dt1:
    id: dt1
    input:
      availableSeats:
        "$serde_json::private::Number": "5"
      avgCompetitorPrice:
        "$serde_json::private::Number": "25"
      basePrice:
        "$serde_json::private::Number": "250"
      daysToDepature:
        "$serde_json::private::Number": "1"
      demandForecast:
        "$serde_json::private::Number": "95"
      flightId: FL-123
      routeId: JFK-LAX
      totalSeats:
        "$serde_json::private::Number": "180"
    name: time_urgency
    order:
      "$serde_json::private::Number": "1"
    output:
      availableSeats:
        "$serde_json::private::Number": "5"
      avgCompetitorPrice:
        "$serde_json::private::Number": "25"
      basePrice:
        "$serde_json::private::Number": "250"
      daysToDepature:
        "$serde_json::private::Number": "1"
      demandForecast:
        "$serde_json::private::Number": "95"
      flightId: FL-123
      routeId: JFK-LAX
      totalSeats:
        "$serde_json::private::Number": "180"
      urgencyLevel: high
      urgencyMultiplier:
        "$serde_json::private::Number": "1.5"
    performance: "[perf]"
    traceData:
      index:
        "$serde_json::private::Number": "0"
      reference_map:
        daysToDepature:
          "$serde_json::private::Number": "1"
      rule:
        _id: r1-1
        "daysToDepature[i1-1]": "< 3"
  dt2:
    id: dt2
    input:
      availabilityRatio:
        "$serde_json::private::Number": "0.0277777777777777777777777778"
      availableSeats:
        "$serde_json::private::Number": "5"
      avgCompetitorPrice:
        "$serde_json::private::Number": "25"
      basePrice:
        "$serde_json::private::Number": "250"
      competitiveIndex:
        "$serde_json::private::Number": "0.1"
      daysToDepature:
        "$serde_json::private::Number": "1"
      demandForecast:
        "$serde_json::private::Number": "95"
      demandIndex:
        "$serde_json::private::Number": "0.95"
      flightId: FL-123
      routeId: JFK-LAX
      totalSeats:
        "$serde_json::private::Number": "180"
      urgencyLevel: high
      urgencyMultiplier:
        "$serde_json::private::Number": "1.5"
    name: inventory_demand
    order:
      "$serde_json::private::Number": "3"
    output:
      availabilityRatio:
        "$serde_json::private::Number": "0.0277777777777777777777777778"
      availableSeats:
        "$serde_json::private::Number": "5"
      avgCompetitorPrice:
        "$serde_json::private::Number": "25"
      basePrice:
        "$serde_json::private::Number": "250"
      competitiveIndex:
        "$serde_json::private::Number": "0.1"
      daysToDepature:
        "$serde_json::private::Number": "1"
      demandForecast:
        "$serde_json::private::Number": "95"
      demandIndex:
        "$serde_json::private::Number": "0.95"
      demandLevel: very_high
      flightId: FL-123
      inventoryMultiplier:
        "$serde_json::private::Number": "1.3"
      routeId: JFK-LAX
      totalSeats:
        "$serde_json::private::Number": "180"
      urgencyLevel: high
      urgencyMultiplier:
        "$serde_json::private::Number": "1.5"
    performance: "[perf]"
    traceData:
      index:
        "$serde_json::private::Number": "0"
      reference_map:
        availabilityRatio:
          "$serde_json::private::Number": "0.0277777777777777777777777778"
        demandIndex:
          "$serde_json::private::Number": "0.95"
      rule:
        _id: r2-1
        "availabilityRatio[i2-1]": "< 0.2"
        "demandIndex[i2-2]": "> 0.8"
  dt3:
    id: dt3
    input:
      availabilityRatio:
        "$serde_json::private::Number": "0.0277777777777777777777777778"
      availableSeats:
        "$serde_json::private::Number": "5"
      avgCompetitorPrice:
        "$serde_json::private::Number": "25"
      basePrice:
        "$serde_json::private::Number": "250"
      competitiveIndex:
        "$serde_json::private::Number": "0.1"
      daysToDepature:
        "$serde_json::private::Number": "1"
      demandForecast:
        "$serde_json::private::Number": "95"
      demandIndex:
        "$serde_json::private::Number": "0.95"
      demandLevel: very_high
      flightId: FL-123
      inventoryMultiplier:
        "$serde_json::private::Number": "1.3"
      routeId: JFK-LAX
      totalSeats:
        "$serde_json::private::Number": "180"
      urgencyLevel: high
      urgencyMultiplier:
        "$serde_json::private::Number": "1.5"
    name: final_pricing
    order:
      "$serde_json::private::Number": "4"
    output:
      finalPrice:
        "$serde_json::private::Number": "536.25"
      priceStrategy: premium
    performance: "[perf]"
    traceData:
      index:
        "$serde_json::private::Number": "0"
      reference_map:
        competitiveIndex:
          "$serde_json::private::Number": "0.1"
        demandLevel: very_high
        urgencyLevel: high
      rule:
        _id: r3-1
        "competitiveIndex[i3-3]": "< 0.9"
        "demandLevel[i3-2]": "'very_high'"
        "urgencyLevel[i3-1]": "'high'"
  ex1:
    id: ex1
    input:
      availableSeats:
        "$serde_json::private::Number": "5"
      avgCompetitorPrice:
        "$serde_json::private::Number": "25"
      basePrice:
        "$serde_json::private::Number": "250"
      daysToDepature:
        "$serde_json::private::Number": "1"
      demandForecast:
        "$serde_json::private::Number": "95"
      flightId: FL-123
      routeId: JFK-LAX
      totalSeats:
        "$serde_json::private::Number": "180"
      urgencyLevel: high
      urgencyMultiplier:
        "$serde_json::private::Number": "1.5"
    name: calculate_factors
    order:
      "$serde_json::private::Number": "2"
    output:
      availabilityRatio:
        "$serde_json::private::Number": "0.0277777777777777777777777778"
      availableSeats:
        "$serde_json::private::Number": "5"
      avgCompetitorPrice:
        "$serde_json::private::Number": "25"
      basePrice:
        "$serde_json::private::Number": "250"
      competitiveIndex:
        "$serde_json::private::Number": "0.1"
      daysToDepature:
        "$serde_json::private::Number": "1"
      demandForecast:
        "$serde_json::private::Number": "95"
      demandIndex:
        "$serde_json::private::Number": "0.95"
      flightId: FL-123
      routeId: JFK-LAX
      totalSeats:
        "$serde_json::private::Number": "180"
      urgencyLevel: high
      urgencyMultiplier:
        "$serde_json::private::Number": "1.5"
    performance: "[perf]"
    traceData:
      availabilityRatio:
        result: "0.0277777777777777777777777778"
      competitiveIndex:
        result: "0.1"
      demandIndex:
        result: "0.95"
  ip1:
    id: ip1
    input: ~
    name: request
    order:
      "$serde_json::private::Number": "0"
    output:
      availableSeats:
        "$serde_json::private::Number": "5"
      avgCompetitorPrice:
        "$serde_json::private::Number": "25"
      basePrice:
        "$serde_json::private::Number": "250"
      daysToDepature:
        "$serde_json::private::Number": "1"
      demandForecast:
        "$serde_json::private::Number": "95"
      flightId: FL-123
      routeId: JFK-LAX
      totalSeats:
        "$serde_json::private::Number": "180"
    performance: "[perf]"
    traceData: ~
